unpackaged/main/default/objects/Freight_Item_Staging__c/Freight_Item_Staging__c.object-meta.xml
<CustomObject>
    <description>Custom Object for Freight Items Staging.</description>
    <label>Freight Item Staging</label>
    <nameField>
        <label>TOPS Freight Item Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Freight Items Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>