unpackaged/main/default/objects/Freight_Item_Staging__c/fields/Crated_Weight__c.field-meta.xml
<CustomField>
    <fullName>Crated_Weight__c</fullName>
    <description>Crated Weight</description>
    <inlineHelpText>Crated Weight</inlineHelpText>
    <label>Crated Weight</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>