unpackaged/main/default/objects/Freight_Item_Staging__c/fields/freight_item__c.field-meta.xml
<CustomField>
    <fullName>freight_item__c</fullName>
    <description>Record Id</description>
    <inlineHelpText>Record Id</inlineHelpText>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>