unpackaged/main/default/objects/Freight_Item_Staging__c/fields/Hazardous_Material__c.field-meta.xml
<CustomField>
    <fullName>Hazardous_Material__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hazardous Material</description>
    <inlineHelpText>Hazardous Material</inlineHelpText>
    <label>Hazardous Material</label>
    <type>Checkbox</type>
</CustomField>