unpackaged/main/default/objects/Freight_Item_Staging__c/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <description>Height</description>
    <inlineHelpText>Height</inlineHelpText>
    <label>Height</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>