unpackaged/main/default/objects/Freight_Item_Staging__c/fields/Interface_Batch_Number__c.field-meta.xml
<CustomField>
    <fullName>Interface_Batch_Number__c</fullName>
    <label>Batch #</label>
    <length>15</length>
    <type>Text</type>
</CustomField>