unpackaged/main/default/objects/Freight_Item_Staging__c/fields/Length__c.field-meta.xml
<CustomField>
    <fullName>Length__c</fullName>
    <description>Length</description>
    <inlineHelpText>Length</inlineHelpText>
    <label>Length</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>