unpackaged/main/default/objects/Freight_Item_Staging__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <description>Quote Id</description>
    <inlineHelpText>Quote Id</inlineHelpText>
    <label>Quote Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>