unpackaged/main/default/objects/Freight_Item_Staging__c/fields/Width__c.field-meta.xml
<CustomField>
    <fullName>Width__c</fullName>
    <description>Width</description>
    <inlineHelpText>Width</inlineHelpText>
    <label>Width</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>